--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/notify": "^0.0.34",
     "axios": "^1.7.4",
     "notiflix": "^3.2.7",
     "react": "^18.3.1",
